# backend/docs/openapi.apifox.cn.json
@@ -2318,6 +2318,11 @@
               "private"
             ]
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
           "updated_at": {
             "type": "string",
             "format": "date-time",
